---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: ????
  Features:
    - Added `table.array_merge()` and `table.retrieve()`
    - Added `flib_pin` and `flib_settings` sprites in black, white, and disabled variants
      - These are for use with frame action buttons
    - Added `gui.flib-keep-open` and `gui.flib-settings` locales for use with the aforementioned sprites
---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 2021-09-19
  Features:
    - Added `flib-dictionary-levels-per-batch` setting
  Changes:
    - Children may now be defined in `gui.add()`
      - If you need to return refs to children, use `gui.build()` instead
    - `flib-translations-per-tick` setting is now hidden
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 2021-08-20
  Bugfixes:
    - Fixed that math.round() was incorrect for some negative numbers
    - Fixed that the on-tick-n module was not documented and not mentioned in the v0.8.0 changelog
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 2021-08-10
  Bugfixes:
    - Fixed the dictionary module not handling if the language detection string was lost across save/load
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2021-08-09
  Changes:
    - The dictionary module no longer provides an event to hook, instead returning the finished dictionaries directly from `process_translation`
      - This is to allow a single-source-of-truth for the language's dictionaries, which was the original intention, but returning them in an event broke that intention
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2021-08-08
  Features: