@@ -2,6 +2,7 @@
 Version: 0.9.0
 Date: ????
   Features:
+    - Added `queue` module
     - Added `table.array_merge()` and `table.retrieve()`
     - Added `flib_pin` and `flib_settings` sprites in black, white, and disabled variants
       - These are for use with frame action buttons
